# btnlib

./: .gitignore  CMakeLists.txt  LICENSE  createLibZipArchive.sh
example/: example.c
src/: btnlib.c  btnlib.h
